Fix timeline2 sizing/spacing

--- a/analytics/timeline2/time.css
+++ b/analytics/timeline2/time.css
@@ -10,8 +10,8 @@
 }
 
 #container {
-    height: 900px;
-    max-width: 1000px;
+    height: 70vh;
+    max-width: 60vw;
     margin: 0 auto;
 }
 
